# FlashCompress

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CTestTestfile.cmake  Package.swift  README.md  cmake_install.cmake  compile_commands.json  metal_test  sample.txt  test.txt
.circleci/: config.yml
BuildTools/: compile-metal.sh
FlashCompress.xcodeproj/: project.pbxproj
FlashCompress.xcodeproj/xcshareddata/xcschemes/: GPUZipTests.xcscheme
GPUZip.xcodeproj/: project.pbxproj
GPUZip.xcodeproj/xcshareddata/xcschemes/: gpuzip.xcscheme
Plugins/MetalCompiler/: Package.swift
Plugins/MetalCompiler/Plugins/MetalCompiler/: plugin.swift
Sources/FlashCompress/App/: FlashCompressApp.swift
Sources/FlashCompress/Components/: CardView.swift  PrimaryButton.swift
Sources/FlashCompress/Core/: CompressedFileHeader.swift  CompressionManager.swift
Sources/FlashCompress/Metal/: Kernels.air  Kernels.metal  MetalPipelineManager.swift  MetalTypes.swift  default.metallib
Sources/FlashCompress/Resources/Metal/: default.metallib
Sources/FlashCompress/Shared/: MetalErrors.swift
Sources/FlashCompress/Theme/: ColorTheme.swift  FontTheme.swift
Sources/FlashCompress/UI/: ContentView.swift
Sources/FlashCompress/Views/: CompressionProgressView.swift  ContentView.swift  ContentViewModel.swift
Tests/FlashCompressTests/: CompressionTests.swift  MetalTests.swift
src/: CompressionEngine.h  CompressionEngine.mm  Shaders.metal  compression.cu  decompression.cu  gpu_utils.cu  gpuzip.cuh  main.cu  main.mm
tests/: compression_tests.mm  metal_test.mm
